# STM32F411E-DISCO-rust-testing

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs
